--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:type" content="website" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.ico" />
+  <link rel="icon" type="image/jpg" href="/public/Favico.ico" />
   <!-- Styles -->
   <script type="application/ld+json">
     {
