--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO -->
-  <title>Kennel Shirkus</title>
+  <title>Kennel Shebonemo</title>
   <meta name="description"
-    content="Kennel shirkus - Kennel shirkus ddrives av Bente Tyrholm -  Oppdrett av storpudler- med fokus på helse og kvalitet. Se vår hunder og valpekull" />
+    content="Kennel Shebonemo - Kennel Shebonemo ddrives av Puddel Mona -  Oppdrett av storpudler- med fokus på helse og kvalitet. Se vår hunder og valpekull" />
   <meta name="keywords"
-    content="Kennel Shirkus, Bente Tyrholm, storpuddel oppdrett, puddel valper, champion linjer, FCI-registrert kennel, hundehelse" />
-  <meta name="author" content="Shirkus Kennel" />
+    content="Kennel Shebonemo, Mona, puddelMona storpuddel oppdrett, puddel valper, champion linjer, FCI-registrert kennel, hundehelse" />
+  <meta name="author" content="Shebonemo Kennel" />
 
   <!-- Open Graph (for deling på sosiale medier) -->
-  <meta property="og:title" content="Kennel Shirkus | Oppdrett av Pudler" />
-  <meta property="og:image" content="https://shrikus.netlify.app/images/puddel.jpg" />
-  <meta property="og:url" content="https://shrikus.netlify.app/" />
+  <meta property="og:title" content="Kennel Shebonemo | Oppdrett av Pudler" />
+  <meta property="og:image" content="https://puddelmona.netlify.app/images/puddel.jpg" />
+  <meta property="og:url" content="https://puddelmona.netlify.app/" />
   <meta property="og:type" content="website" />
 
   <!-- Favicon -->
@@ -26,19 +26,15 @@
     {
       "@context": "https://schema.org",
       "@type": "Organization",
-      "name": "Kennel Shirkus",
-      "url": "https://shrikus.netlify.app/",
-      "logo": "https://shrikus.netlify.app/images/logo.png",
-      "description": "Oppdrett av storpudler med fokus på helse, temperament og kvalitet. Kennel Shirkus drives av Bente Tyrholm.",
+      "name": "Kennel Shebonemo",
+      "url": "https://puddelmona.netlify.app/",
+      "logo": "https://puddelmona.netlify.app/images/logo.png",
+      "description": "Oppdrett av storpudler med fokus på helse, temperament og kvalitet. Kennel Shebonemo drives av Puddel Mona.",
       "founder": {
         "@type": "Person",
-        "name": "Bente Tyrholm"
+        "name": "PuddelMona"
       },
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "contactType": "customer service",
-        "email": "kontakt@shirkus.no"
-      }
+     
     }
     </script>
   <meta name="google-site-verification" content="TPX-Bh1bo-EcFNoW5uSzUMIdyacFxz2R4U5R0zJhx2s" />
